--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,9 @@
+cycler==0.10.0
+kiwisolver==1.1.0
+matplotlib==3.1.2
 numpy==1.17.4
 opencv-contrib-python==3.4.2.16
 opt-einsum==3.1.0
+pyparsing==2.4.5
+python-dateutil==2.8.1
+six==1.13.0
